<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:layout_marginBottom="?attr/actionBarSize"
        android:clipChildren="false">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/buttons"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/ivArticle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:visibility="invisible"
                android:src="@drawable/ic_launcher_foreground" />

            <ImageView
                android:id="@+id/ivLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/progress_animation" />

            <Button
                android:id="@+id/btReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:text="@string/review"/>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttons_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/normal_margin"
            android:weightSum="4"
            android:clipChildren="false">

            <ImageView
                android:id="@+id/ivDislike"
                android:layout_width="@dimen/like_dis_like_size"
                android:layout_height="@dimen/like_dis_like_size"
                android:layout_gravity="center"
                android:src="@drawable/thumb_down_outline"
                android:padding="4dp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clipChildren="false">

                <FrameLayout
                    android:id="@+id/likes"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipChildren="false">

                    <ImageView
                        android:id="@+id/ivLikeStar"
                        android:layout_width="@dimen/like_start_size"
                        android:layout_height="@dimen/like_start_size"
                        android:background="@drawable/star" />

                    <TextView
                        android:id="@+id/tvLiked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:text="0" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="@dimen/like_start_size"
                    android:layout_height="@dimen/like_start_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="0" />

            </LinearLayout>


            <ImageView
                android:id="@+id/ivLike"
                android:layout_width="@dimen/like_dis_like_size"
                android:layout_height="@dimen/like_dis_like_size"
                android:layout_gravity="center"
                android:src="@drawable/thumb_up_outline"
                android:padding="@dimen/short_margin"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>